<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="EnterMobileNumberOne">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginTop="90dp"
            android:src="@drawable/sendmessage"
            android:importantForAccessibility="no"
            android:contentDescription="@string/todo" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/otp_verification"
            android:textColor="@color/colortextfirst"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="50dp"
            android:gravity="center"
            android:text="@string/we_will_send_you_an_otp_on_this_given_number"
            android:textColor="@color/colortextsecond"
            android:textSize="14sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="15dp"
            android:layout_marginRight="30dp"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:text="@string/enter_mobile_number"
            android:textColor="@color/colortextfirst"
            android:textSize="14sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="60dp"
            android:layout_marginEnd="60dp"
            android:background="@drawable/backgroundbox"
            android:orientation="horizontal"
            android:visibility="visible">


            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/_91"
                android:textColor="@color/colortextfirst"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/input_mobile_number"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:background="@null"
                android:clickable="true"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:hint="@string/_9764886907"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:inputType="number"
                android:textColor="@color/colortextfirst"
                android:textSize="16sp"
                android:textStyle="bold"
                android:visibility="visible"
                tools:ignore="LabelFor" />

        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <Button
                android:id="@+id/buttongetotp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/get_otp"
                android:layout_margin="30dp"
                android:textColor="@color/colortextfirst"
                android:textStyle="bold"
                android:background="@drawable/backgroundbutton"/>

            <ProgressBar
                android:id="@+id/progressbar_sending_otp"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:visibility="gone"/>

        </FrameLayout>



    </LinearLayout>

</ScrollView>