<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:overScrollMode="never"
    android:scrollbars="none"
    tools:context=".verification_otp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_marginTop="80dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/recievemessage" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/otp_verification"
            android:textColor="@color/colortextfirst"
            android:textSize="25sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="50dp"
            android:gravity="center"
            android:text="@string/please_enter_the_otp_sent_to_you"
            android:textColor="@color/colortextsecond"
            android:textSize="14sp"/>


        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="50dp"
            android:layout_gravity="center"
            android:textColor="@color/colortextfirst"
            android:textSize="14sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/inputotp1"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:gravity="center"
                android:layout_gravity="center"
                android:background="@drawable/backgroundbox"
                android:hint="@string/_2"
                android:textColorHint="@color/transparent"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/colortextfirst"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignore="LabelFor" />

            <EditText
                android:id="@+id/inputotp2"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:gravity="center"
                android:layout_gravity="center"
                android:layout_marginStart="4dp"
                android:background="@drawable/backgroundbox"
                android:hint="@string/_2"
                android:textColorHint="@color/transparent"
                android:imeOptions="actionNext"
                android:importantForAccessibility="yes"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/colortextfirst"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignore="ExtraText,LabelFor" />

            <EditText
                android:id="@+id/inputotp3"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginStart="4dp"
                android:gravity="center"
                android:layout_gravity="center"
                android:background="@drawable/backgroundbox"
                android:hint="@string/_2"
                android:textColorHint="@color/transparent"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/colortextfirst"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignore="LabelFor" />

            <EditText
                android:id="@+id/inputotp4"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginStart="4dp"
                android:gravity="center"
                android:layout_gravity="center"
                android:background="@drawable/backgroundbox"
                android:hint="@string/_2"
                android:textColorHint="@color/transparent"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/colortextfirst"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignore="LabelFor" />

            <EditText
                android:id="@+id/inputotp5"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginStart="4dp"
                android:gravity="center"
                android:layout_gravity="center"
                android:background="@drawable/backgroundbox"
                android:hint="@string/_2"
                android:textColorHint="@color/transparent"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/colortextfirst"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignore="LabelFor" />

            <EditText
                android:id="@+id/inputotp6"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginStart="4dp"
                android:gravity="center"

                android:layout_gravity="center"
                android:background="@drawable/backgroundbox"
                android:hint="@string/_2"
                android:textColorHint="@color/transparent"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/colortextfirst"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignore="LabelFor" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/textView7"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/didn_t_receive_otp1"
                android:textColor="@color/colortextsecond"
                android:textSize="14sp"
                android:textAlignment="viewEnd"/>

            <TextView
                android:id="@+id/resendotp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="8dp"
                android:text="@string/resend_otp_again"
                android:textColor="@color/colortextfirst"
                android:textSize="15sp"
                android:textStyle="bold"/>


        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/buttongetotp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/submit"
                android:layout_margin="30dp"
                android:textColor="@color/colortextfirst"
                android:textStyle="bold"
                android:background="@drawable/backgroundbutton"/>

            <ProgressBar
                android:id="@+id/progressbar_sending_otp"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:visibility="gone"/>

        </FrameLayout>




    </LinearLayout>

</ScrollView>