<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/constraint"
        android:layout_marginTop="20dp">

        <TextView
            android:id="@+id/splitshare"
            android:layout_width="191dp"
            android:layout_height="50dp"
            android:layout_marginStart="18dp"
            android:layout_marginTop="44dp"
            android:text="@string/splitshare"
            android:textColor="@color/colortextfirst"
            android:textSize="35sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/logotemp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/dash"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginTop="8dp"
            android:text="@string/dashboard"
            android:textColor="@color/colortextsecond"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@+id/logotemp"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/splitshare" />

        <ImageView
            android:id="@+id/logotemp"
            android:layout_width="152dp"
            android:layout_height="122dp"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/splitshare"
            android:src="@drawable/logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/splitshare"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="175dp"
            android:id="@+id/row1"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:padding="10dp"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/splitshare">

            <androidx.cardview.widget.CardView
                android:id="@+id/group_card"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="1"
                app:cardCornerRadius="20dp"
                app:cardElevation="20dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/groups"
                        android:text="@string/profile"
                        android:textSize="20sp"
                        android:textColor="@color/colortextfirst"
                        android:layout_centerHorizontal="true"
                        android:layout_below="@id/group_image"/>

                    <ImageView
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:id="@+id/group_image"
                        android:src="@drawable/profile"
                        android:layout_marginTop="15dp"
                        android:layout_centerHorizontal="true"
                        android:contentDescription="@string/groups"/>

                </RelativeLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/group_list"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="1"
                app:cardCornerRadius="20dp"
                app:cardElevation="20dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/tracking"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/trackmoney"
                        android:layout_centerHorizontal="true"
                        android:text="@string/groups"
                        android:textColor="@color/colortextfirst"
                        android:textSize="20sp" />

                    <ImageView
                        android:id="@+id/trackmoney"
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="15dp"
                        android:contentDescription="@string/groups"
                        android:src="@drawable/groups" />

                </RelativeLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="175dp"
            android:id="@+id/row2"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:padding="10dp"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/row1">





        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
